Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/8138840/T8138840.out
T8138840.java:10:22: compiler.err.operator.cant.be.applied.1: &, int, double
1 error
